# LCCLightingTouchscreen

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
.github/workflows/: build-release.yml
docs/: AGENTS.md  ARCHITECTURE.md  INTERFACES.md  SPEC.md  TEST_PLAN.md
main/: CMakeLists.txt  main.c
main/app/: bootloader_display.c  bootloader_display.h  bootloader_hal.cpp  bootloader_hal.h  fade_controller.c  fade_controller.h  lcc_config.hxx  lcc_node.cpp  lcc_node.h  screen_timeout.c  screen_timeout.h
main/ui/: ui_common.c  ui_scenes.c
sdcard/: nodeid.txt  openmrn_config  scenes.json
